# Query-Parser-for-Static-Program-Analysis

./: .gitignore
Team00/Code00/: CMakeLists.txt
Team00/Code00/src/spa/: CMakeLists.txt  EntitiesTable.cpp
Team00/Code00/src/spa/src/: Any.cpp  Any.h  ClauseType.h  Declaration.cpp  Declaration.h  DesignExtractor.cpp  DesignExtractor.h  DesignExtractorHelper.h  EntitiesTable.cpp  EntitiesTable.h  EntityType.h  Expression.cpp  Expression.h  Ident.cpp  Ident.h  Indent.cpp  Indent.h  OptionalClause.cpp  OptionalClause.h  PKB.cpp  PKB.h  PKBInterface.h  Parser.cpp  Parser.h  ParserHelper.cpp  ParserHelper.h  PatternClause.cpp  PatternClause.h  Query.cpp  Query.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryInput.cpp  QueryInput.h  QueryInputType.h  QueryInterface.h  QueryParser.cpp  QueryParser.h  QueryParserErrorMessages.h  QueryParserErrorUtility.cpp  (+28 more)
Team00/Code00/src/spa/src/header files/: Any.h  EntityType.h  Expression.h  Indent.h  QueryInput.h  RelationshipType.h  StmtNum.h
Team00/Code00/src/unit_testing/: CMakeLists.txt
Team00/Code00/src/unit_testing/src/: PKBStub.cpp  PKBStub.h  ParserTokenizerIntegrationTester.cpp  TestDesignExtractor.cpp  TestDesignExtractorHelper.cpp  TestFrontEndUtils.h  TestPKB.cpp  TestParser.cpp  TestQuery.cpp  TestQueryEvaluator.cpp  TestQueryParser.cpp  TestResultUtil.cpp  TestResultsProjector.cpp  TestResultsTable.cpp  TestResultsTableUtil.cpp  TokenizerStub.cpp  TokenizerStub.h  TokenizerTester.cpp
Team00/Tests00/: conditionalTest_queries.txt  conditionalTest_source.txt  simpleTest_queries.txt
Team00/Tests00/complexTest/: complexTest_2_Clause.txt  complexTest_FollowStar_Invalid.txt  complexTest_FollowStar_Valid.txt  complexTest_Follows_Invalid.txt  complexTest_Follows_Valid.txt  complexTest_Modifies_Valid.txt  complexTest_ParentStar_Valid.txt  complexTest_Parent_Invalid.txt  complexTest_Parent_Valid.txt  complexTest_Pattern_Invalid.txt  complexTest_Pattern_Valid.txt  complexTest_Uses_Invalid.txt  complexTest_Uses_Valid.txt  complexTest_source.txt
Team00/Tests00/conditionalTest/: conditionalTest_2_Clause.txt  conditionalTest_FollowStar_Invalid.txt  conditionalTest_FollowStar_Valid.txt  conditionalTest_Follows_Invalid.txt  conditionalTest_Follows_Valid.txt  conditionalTest_Modifies_Invalid.txt  conditionalTest_Modifies_Valid.txt  conditionalTest_ParentStar_Invalid.txt  conditionalTest_ParentStar_Valid.txt  conditionalTest_Parent_Invalid.txt  conditionalTest_Parent_Valid.txt  conditionalTest_Pattern_Invalid.txt  conditionalTest_Pattern_Valid.txt  conditionalTest_Uses_Invalid.txt  conditionalTest_Uses_Valid.txt  conditionalTest_source.txt  output.xml
Team00/Tests00/iteration2/: extraTest.xml
Team00/Tests00/nestedTest/: nestedTest_2_Clause.txt  nestedTest_FollowStar_Invalid.txt  nestedTest_FollowStar_Valid.txt  nestedTest_Follows_Invalid.txt  nestedTest_Follows_Valid.txt  nestedTest_Modifies_Valid.txt  nestedTest_ParentStar_Invalid.txt  nestedTest_ParentStar_Valid.txt  nestedTest_Parent_Invalid.txt  nestedTest_Parent_Valid.txt  nestedTest_Pattern_Valid.txt  nestedTest_Uses_Invalid.txt  nestedTest_Uses_Valid.txt  nestedTest_source.txt  output.xml
Team00/Tests00/simpleTest/: output.xml  simpleTest_2_Clause.txt  simpleTest_2_Clause_Valid.txt  simpleTest_FollowStar_Invalid.txt  simpleTest_FollowStar_Valid.txt  simpleTest_Follows_Invalid.txt  simpleTest_Follows_Valid.txt  simpleTest_Modifies_Invalid.txt  (+8 more)
(+122 files in other folders)
